# GigglyCode

./: .clang-format  .fuse_hidden0000a35c00000004  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
.github/workflows/: test.yml
examples/donut/src/: main.gc
gpm/src/: main.gc
src/: .main.cpp.swp  CMakeLists.txt  compilation_state.cpp  compilation_state.hpp  config.hpp  gigc.cpp  gigly.cpp  main.cpp
src/compiler/: CMakeLists.txt  buildins.cpp  compiler.cpp  compiler.hpp  initCSTD.cpp
src/compiler/enviornment/: CMakeLists.txt  enviornment.cpp  enviornment.hpp
src/errors/: CMakeLists.txt  errors.cpp  errors.hpp
src/include/: cli11.hpp  json.hpp
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp  token.cpp  token.hpp
src/parser/: CMakeLists.txt  macrointerpreter.cpp  macrointerpreter.hpp  parser.cpp  parser.hpp
src/parser/AST/: CMakeLists.txt  ast.cpp  ast.hpp
src_/: main.cpp
src_/compiler/: compiler.cpp  compiler.hpp
src_/compiler/enviornment/: CMakeLists.txt  enviornment.cpp  enviornment.hpp
src_/errors/: errors.cpp  errors.hpp
src_/lexer/: helper.cpp  lexer.cpp  lexer.hpp  string.cpp  tokens.cpp  tokens.hpp
src_/parser/: parser.cpp  parser.hpp
src_/parser/AST/: ast.cpp  ast.hpp
std/src/: cliapp.gc  map.gc
test/: collect_results.py  math.gc  run_tests.py  test.py  testscipt.gc  verification_report.md
test/src/: main.gc  other.gc
test/src/std/: math.gc  sys.gc
test/test1/: test1.md
test/test1/expected/: main.gc.ll  parser_output.yaml  stdout.txt
test/test1/expected/ir/aarch64-linux-gnu/: main.gc.ll
test/test1/expected/ir/s390x-linux-gnu/: main.gc.ll
test/test1/expected/ir/wasm32-wasi/: main.gc.ll
test/test1/expected/ir/x86_64-linux-gnu/: main.gc.ll
test/test1/src/: main.gc
test/test10/: test10.md
test/test10/expected/: main.gc.ll  parser_output.yaml  stdout.txt
test/test10/expected/ir/aarch64-linux-gnu/: main.gc.ll
test/test10/expected/ir/s390x-linux-gnu/: main.gc.ll
test/test10/expected/ir/wasm32-wasi/: main.gc.ll
test/test10/expected/ir/x86_64-linux-gnu/: main.gc.ll
test/test10/src/: main.gc
test/test11/: test11.md
test/test11/expected/: main.gc.ll  parser_output.yaml  stdout.txt
test/test11/expected/ir/aarch64-linux-gnu/: main.gc.ll
test/test11/expected/ir/s390x-linux-gnu/: main.gc.ll
test/test11/expected/ir/wasm32-wasi/: main.gc.ll
test/test11/expected/ir/x86_64-linux-gnu/: main.gc.ll
test/test11/src/: main.gc
test/test12/: test12.md
test/test12/expected/: main.gc.ll  parser_output.yaml  stdout.txt
test/test12/expected/ir/aarch64-linux-gnu/: main.gc.ll
test/test12/expected/ir/s390x-linux-gnu/: main.gc.ll
test/test12/expected/ir/wasm32-wasi/: main.gc.ll
test/test12/expected/ir/x86_64-linux-gnu/: main.gc.ll
test/test12/src/: main.gc
test/test13/: test13.md
test/test13/expected/: main.gc.ll  parser_output.yaml  stdout.txt
test/test13/expected/ir/aarch64-linux-gnu/: main.gc.ll
test/test13/expected/ir/s390x-linux-gnu/: main.gc.ll
test/test13/expected/ir/wasm32-wasi/: main.gc.ll
test/test13/expected/ir/x86_64-linux-gnu/: main.gc.ll
test/test13/src/: main.gc
test/test14/expected/: main.gc.ll  parser_output.yaml  stdout.txt
test/test14/expected/ir/aarch64-linux-gnu/: main.gc.ll
test/test14/expected/ir/s390x-linux-gnu/: main.gc.ll
test/test14/expected/ir/wasm32-wasi/: main.gc.ll
test/test14/expected/ir/x86_64-linux-gnu/: main.gc.ll
test/test14/src/: main.gc
test/test15/expected/: parser_output.yaml  stdout.txt
test/test15/expected/ir/aarch64-linux-gnu/: main.gc.ll
test/test15/expected/ir/s390x-linux-gnu/: main.gc.ll
test/test15/expected/ir/wasm32-wasi/: main.gc.ll
test/test15/expected/ir/x86_64-linux-gnu/: main.gc.ll
test/test15/src/: main.gc
test/test16/: test16.md
test/test16/expected/: parser_output.yaml  stdout.txt
test/test16/expected/ir/aarch64-linux-gnu/: main.gc.ll
test/test16/expected/ir/s390x-linux-gnu/: main.gc.ll
test/test16/expected/ir/wasm32-wasi/: main.gc.ll
test/test16/expected/ir/x86_64-linux-gnu/: main.gc.ll
test/test16/src/: main.gc
test/test2/: test2.md
test/test2/expected/: main.gc.ll  parser_output.yaml  stdout.txt
test/test2/expected/ir/aarch64-linux-gnu/: main.gc.ll
test/test2/expected/ir/s390x-linux-gnu/: main.gc.ll
test/test2/expected/ir/wasm32-wasi/: main.gc.ll
test/test2/expected/ir/x86_64-linux-gnu/: main.gc.ll
test/test2/src/: main.gc
test/test3/: test3.md
test/test3/expected/: main.gc.ll  parser_output.yaml  stdout.txt
test/test3/expected/ir/aarch64-linux-gnu/: main.gc.ll
test/test3/expected/ir/s390x-linux-gnu/: main.gc.ll
test/test3/expected/ir/wasm32-wasi/: main.gc.ll
test/test3/expected/ir/x86_64-linux-gnu/: main.gc.ll
test/test3/src/: main.gc
test/test4/: test4.md
test/test4/expected/: main.gc.ll  parser_output.yaml  stdout.txt
test/test4/expected/ir/aarch64-linux-gnu/: main.gc.ll
test/test4/expected/ir/s390x-linux-gnu/: main.gc.ll
test/test4/expected/ir/wasm32-wasi/: main.gc.ll
test/test4/expected/ir/x86_64-linux-gnu/: main.gc.ll
test/test4/src/: main.gc
test/test5/: test5.md
test/test5/expected/: main.gc.ll  parser_output.yaml  stdout.txt
test/test5/expected/ir/aarch64-linux-gnu/: main.gc.ll
test/test5/src/: main.gc
test/test6/: test6.md
test/test6/expected/: main.gc.ll  parser_output.yaml  stdout.txt
test/test6/src/: main.gc
test/test7/: test7.md
test/test7/expected/: main.gc.ll  parser_output.yaml  stdout.txt
test/test7/src/: main.gc
test/test8/: test8.md
test/test8/expected/: main.gc.ll  parser_output.yaml  stdout.txt
test/test8/src/: main.gc
test/test9/: test9.md
test/test9/expected/: main.gc.ll  parser_output.yaml  stdout.txt
test/test9/src/: main.gc
test/test_big/: test_big.md
test/test_big/expected/: main.gc.ll  parser_output.yaml  stdout.txt
test/test_big/src/: main.gc
test/test_big/src/modules/: helper.gc
test/testf1/expected/: stderr.txt
test/testf2/expected/: stderr.txt
test/testf2/src/: main.gc
test/testf3/expected/: stderr.txt
test/testf3/src/: main.gc
(+31 files in other folders)
